# kodiremote-esp32c3-rs

./: .gitignore  Cargo.toml  README.md  cfg.toml.example
src/: board.rs  keypad.rs  kodi.rs  led.rs  main.rs  wifi.rs
